# pydantic-agents

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md  progress.md  pyproject.toml
.array/: analytics.jsonl
.cursor/: hooks.json  mcp.json
.cursor/hooks/: before_prompt_submit_audit.py  before_shell_gate.py  policy.json  pre_tool_task_audit.py  session_audit.py  subagent_audit.py
.cursor/hooks/lib/: __init__.py  (+4 more)
.cursor/rules/: agents-md.mdc  docs.mdc  project-context.mdc  python.mdc
docs/: array-product-voice.md
docs/create-agent-skill/: upstream-deltas.md  upstream-sync.md
docs/pba-agent/: base-agent-prompt.md  eval-simplification-design.md  pydantic-evals.md
pba-agent/: README.md  base-system-prompt.md  docker-compose.yaml  jaeger-config.yaml
pba-agent/evals/: recording.py  run_evals.py
pba-agent/examples/: 01_agent_basics.py  02_base_agent.py  03_domain_agents.py  04_structured_output.py  05_tools.py  06_capabilities.py  07_observability.py  08_evals.py
pba-agent/prompts/: base-system-prompt.md  marketing-agent-prompt.md  operations-agent-prompt.md
pba-agent/scripts/: render_prompts.py  start-jaeger.sh
pba-agent/skills/: README.md
pba-agent/specs/: base-agent.yaml  hello-agent.yaml  hr-agent.yaml  marketing-agent.yaml  operations-agent.yaml
pba-agent/src/: base_agent.py  deps.py  hr_agent.py  marketing_agent.py  models.py  observability.py  operations_agent.py
pba-agent/tests/: conftest.py  test_base_agent.py  test_evaluators.py  test_marketing_agent.py  test_operations_agent.py  test_prompt_contracts.py  test_run_evals.py
(+324 files in other folders)
