[project]
name = "pydantic-agents"
version = "0.1.0"
description = "Cursor hook framework and validation tooling"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai,spec,logfire]>=1.86.1",
]

[dependency-groups]
dev = [
  "ruff>=0.15.10",
  "pytest>=8",
  "jsonschema>=4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".array"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
